 * dig() now takes an optional garbage dbref argument to specify the new
   dbref. Suggested by Paige. [GM]
 * convutctime() and convtime(<time>, utc) to convert a timestring to
   # of seconds since UTC. Patch by Minion.
 * powers() with no arguments now returns a list of powers, similar to
   lflags() with no args. [MG]
 * trim() can now trim multiple characters. [MG] [GM]

Minor Changes:
 * The Can_Nspemit @power has been renamed to Can_Spoof, to better reflect
   its uses. Can_Nspemit is still an alias. [MG]
 * Considerable improvement in the speed of functions that sort
   case-insensitively, particularly using 'm' sort (Now default). [GM]
 * Combined fun_setinter, fun_setdiff and fun_setunion into fun_setmanip. [GM]
 * For hardcoders: list2arr and list2arr_ansi now take a third argument
   on whether to include empty items. [GM]
 * page and @mail will report to you if your recipient(s) cannot reply
   to you. Suggested by Paige. [GM]
 * The debug attribute flag now shows more debug info. [MG]
 * @oemit now does better object matching, can match names with spaces when
   enclosed in double quotes, and, when given a <room> but no matching
   objects, shows the message to everyone in the room, instead of noone.
   From a bug reported by Paige. [MG]
 * Paranoid objects now see nospoof messages for their emits. [MG]
 * ANSI is now ignored when checking the length of channel titles. Suggested
   by Paige. [MG]
 * @decompile with a <prefix> now shows cmds for setting attribute flags.
   @decompile/tf still omits cmds for attr flags. [MG]
 * @mail <msg-lists> which don't specify a folder now act on your current
   folder, instead of Folder 0. Suggested by Paige, patch by Minion.
 * @dig, @open and @name now set exit aliases into the @alias attribute,
   instead of including them in the exit name. Also, @name can now set/clear
   the @alias of players/exits while changing the name. See help @name for
   details. Suggested by Minion. [MG]